message ConnectionMessage
{
  required string userId = 1;
}