message VectorUint {
  required uint32 x = 1;
  required uint32 y = 2;
}

message VectorInt {
  required int32 x = 1;
  required int32 y = 2;
}